--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
     width: 100%; /* Full width */
-    padding: 0px; /* Some padding */ 
+    padding: 12px; /* Some padding */ 
     border: 1px solid #ccc; /* Gray border */
     border-radius: 4px; /* Rounded borders */
     box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 0px; /* Add a top margin */
-    margin-bottom: 0px; /* Bottom margin */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
     resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
   }
   
-/* Style the submit button with a specific background color etc */
-input[type=submit] {
+  /* Style the submit button with a specific background color etc */
+  input[type=submit] {
     background-color: #04AA6D;
     color: white;
     padding: 12px 20px;
@@ -20,33 +20,19 @@ input[type=submit] {
     cursor: pointer;
   }
   
-/* When moving the mouse over the submit button, add a darker green color */
-input[type=submit]:hover {
+  /* When moving the mouse over the submit button, add a darker green color */
+  input[type=submit]:hover {
     background-color: #45a049;
   }
   
-/* Add a background color and some padding around the form */
-.container {
+  /* Add a background color and some padding around the form */
+  .container {
     border-radius: 5px;
-    background-color: #f5f5dc;
+    background-color: #f2f2f2;
     padding: 20px;
   }
 
-.custom-text {
-    font-size: 20px;
-    color: red;
-}
-
-
-code {
-    background-color: #f5f5dc !important;
-    font-family: 'Source Code Pro'!important;
-    font-size: 16px !important;
-    color: darkorange !important;
-    padding: 2px !important;
-    border-radius: 4px !important;
-}
-
-#MainMenu {visibility: hidden;}
-footer {visibility: hidden;}
-header {visibility: hidden;}
+  /* Hide Streamlit branding */
+  #MainMenu {visibility: hidden;}
+  footer {visibility: hidden;}
+  header {visibility: hidden;}
